--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="Aditya Vikram - Senior Software Engineer" />
     <meta property="og:description" content="Senior Software Engineer specializing in machine learning, predictive maintenance, and embedded systems. Expertise in Python, FastAPI, Flask, Django, AWS, and Azure." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/profile-picture.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@avikram553" />
+    <meta name="twitter:image" content="/profile-picture.jpg" />
   </head>
 
   <body>
