Replace Loveable favicon: use profile-picture as favicon and remove old favicon.ico

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <meta name="description" content="Senior Software Engineer specializing in machine learning, predictive maintenance, and embedded systems. Expertise in Python, FastAPI, Flask, Django, AWS, and Azure." />
     <meta name="author" content="Aditya Vikram" />
 
-    <meta property="og:title" content="Aditya Vikram - Senior Software Engineer" />
-    <meta property="og:description" content="Senior Software Engineer specializing in machine learning, predictive maintenance, and embedded systems. Expertise in Python, FastAPI, Flask, Django, AWS, and Azure." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/profile-picture.jpg" />
+  <meta property="og:title" content="Aditya Vikram - Senior Software Engineer" />
+  <meta property="og:description" content="Senior Software Engineer specializing in machine learning, predictive maintenance, and embedded systems. Expertise in Python, FastAPI, Flask, Django, AWS, and Azure." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/profile-picture.jpg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@avikram553" />
-    <meta name="twitter:image" content="/profile-picture.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@avikram553" />
+  <meta name="twitter:image" content="/profile-picture.jpg" />
+
+  <!-- Use profile picture as favicon to remove external/legacy icon -->
+  <link rel="icon" href="/profile-picture.jpg" />
   </head>
 
   <body>
