Major portfolio update: Add recommendations section, update About Me, redesign chatbot with ADI branding, apply Inter/Poppins fonts globally

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   <meta name="twitter:site" content="@avikram553" />
   <meta name="twitter:image" content="/profile-picture.jpg" />
 
+  <!-- Google Fonts - Modern Professional Typography -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
+
   <!-- Use profile picture as favicon to remove external/legacy icon -->
   <link rel="icon" href="/profile-picture.jpg" />
   </head>
